--- a/sample/provision/roles/myproject/templates/ntp.conf.j2
+++ b/sample/provision/roles/myproject/templates/ntp.conf.j2
@@ -22,10 +22,15 @@ filegen clockstats file clockstats type day enable
 # pool.ntp.org maps to about 1000 low-stratum NTP servers.  Your server will
 # pick a different set every time it starts up.  Please consider joining the
 # pool: <http://www.pool.ntp.org/join.html>
-pool 0.debian.pool.ntp.org iburst
-pool 1.debian.pool.ntp.org iburst
-pool 2.debian.pool.ntp.org iburst
-pool 3.debian.pool.ntp.org iburst
+
+# pool 0.debian.pool.ntp.org iburst
+# pool 1.debian.pool.ntp.org iburst
+# pool 2.debian.pool.ntp.org iburst
+# pool 3.debian.pool.ntp.org iburst
+
+server 3.ir.pool.ntp.org
+servar 1.asia.pool.ntp.org
+server 0.asia.pool.ntp.org
 
 
 # Access control configuration; see /usr/share/doc/ntp-doc/html/accopt.html for
